# tauri-windows

./: Cargo.toml  README.md  build.rs  tauri.conf.json
src/: desktop_manager.rs  desktop_restore.rs  desktop_windows.rs  main.rs
